--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>LatLngUpdater</artifactId>
+    <artifactId>GeoHexCellUtility</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>LatLngUpdater</name>
-    <description>LatLngUpdater</description>
+    <name>GeoHexCellUtility</name>
+    <description>GeoHexCellUtility</description>
     <properties>
         <java.version>17</java.version>
     </properties>
